Overflow problem solved

--- a/shuttleofx_client/static_tmp/styles/home.less
+++ b/shuttleofx_client/static_tmp/styles/home.less
@@ -127,7 +127,7 @@
                 position: absolute;
                 bottom: -12em;
                 left: 0;
-                width: 103%;
+                width: 100%;
             }
         }
         .header-content {
@@ -150,10 +150,10 @@
 }
 
 .home-body-container {
-    margin: 0;
-    padding: 0;
+    //margin: 0;
+    //padding: 0;
     //margin-top: 312px;
-    margin-left: -1.5em;
+    margin-left: -1.6em;
     background-color: white;
     @media (max-width: 768px) {
         //margin-top: 230px;
