--- a/shuttleofx_client/static_tmp/styles/styles.less
+++ b/shuttleofx_client/static_tmp/styles/styles.less
@@ -5,6 +5,7 @@
 html,body{
     height: 100%;
     z-index: 1;
+    overflow-x: hidden;
 }
 
 .page-app{
